--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="card">
             <div class="card-1 ">
               <div class="img-section  ">
-                <img src="images/image-victor.jpg" alt="profile photo" clss="img-fluid">
+                <img src="images/image-victor.jpg" alt="profile photo">
               </div>
               <div class="info-section px-4 mt-5">
                 <h1>  Victor Crest <span class="text-muted">26</span></h1>
@@ -28,15 +28,15 @@
               </div>
               <div class="number-section d-flex justify-content-between px-4 border-top ">
                 <div class="number-section-1 mt-2">
-                  <h3>  80K</h3>
+                  <h2>  80K</h2>
                   <p class="text-muted"> Followers</p>
                 </div>
                 <div class="number-section-2 mt-2">
-                  <h3>  803K</h3>
+                  <h2>  803K</h3>
                   <p class="text-muted"> Likes</p>
               </div>
                 <div class="number-section-3 mt-2">
-                  <h3>  1.4K</h3>
+                  <h2>  1.4K</h2>
                   <p class="text-muted"> Photos</p>
                 </div>
             </div>
